# lux-cxx

./: .gitignore  CMakeLists.txt  README.md
algorithm/: CMakeLists.txt  README.md
archtype/: CMakeLists.txt  README.md
archtype/include/lux/cxx/archtype/: Archetype.hpp  Common.hpp  Component.hpp  EntityManager.hpp  Registry.hpp  Signature.hpp  TypeRegistry.hpp
archtype/test/: CMakeLists.txt  archtype_test.cpp  entt_test.cpp
arguments/: CMakeLists.txt  README.md  readme.md
arguments/include/lux/cxx/arguments/: Arguments.hpp
arguments/test/: CMakeLists.txt  arguments_test.cpp
compile_time/: CMakeLists.txt  README.md
compile_time/include/lux/cxx/: ct_string.hpp  extended_type_traits.hpp  static_reflection.hpp  tuple_iterator.hpp
compile_time/include/lux/cxx/compile_time/: computer_graph.hpp  computer_node.hpp  computer_node_sort.hpp  computer_pipeline.hpp  ct_string.hpp  expected.hpp  expected_impl.hpp  extended_type_traits.hpp  fixed_string.hpp  function_name.hpp  function_traits.hpp  move_only_function.hpp  name_traits.hpp  sequence_sort.hpp  tuple_iterator.hpp  tuple_traits.hpp  type_info.hpp  type_map.hpp
compile_time/test/: CMakeLists.txt  compile_time_string_test.cpp  computer_graph_test.cpp  computer_pipeline_test.cpp  fixed_string_test.cpp  function_traits_test.cpp  sequence_sort_test.cpp  type_info_test.cpp  type_map_test.cpp
concurrent/: CMakeLists.txt  README.md
concurrent/include/lux/cxx/concurrent/: BlockingQueue.hpp  LockFreeQueue.hpp  ParallelPipeline.hpp  StrictSpscTripleBuffer.hpp  ThreadPool.hpp  Timer.hpp
concurrent/test/: CMakeLists.txt  blocking_queue_test.cpp  parallel_pipeline_test.cpp  spsc_lckfree_ring_queue_test.cpp  thread_pool_test.cpp  timer_test.cpp
container/: CMakeLists.txt  README.md
container/include/lux/cxx/container/: BlockingQueue.hpp  DenseMap.hpp  HeterogeneousLookup.hpp  HeterogenousLookup.hpp  OrthTree.hpp  SlotMap.hpp  SmallVector.hpp  SparseSet.hpp  Tree.hpp
container/test/: CMakeLists.txt  orth_tree_test.cpp  slot_map_test.cpp  sparse_set_test.cpp  tree_test.cpp
dynamic_reflection/: CMakeLists.txt  README.md  out.json  readme.md
dynamic_reflection/cmake/: FindLibClang.cmake  add_meta.cmake  find_libclang.cmake  find_libclang_unix.cmake  meta.cmake  reflection_header_template.hpp.in  static_meta.cmake  target_add_meta.cmake
dynamic_reflection/docs/: cmake-integration.md  codegen.md  json-schema.md  parser.md
dynamic_reflection/include/lux/cxx/dref/: Error.hpp
dynamic_reflection/include/lux/cxx/dref/generator/: GeneratorHelper.hpp
dynamic_reflection/include/lux/cxx/dref/parser/: Attribute.hpp  CxxParser.hpp  Declaration.hpp  MetaUnit.hpp  ParserResult.hpp  Registry.hpp  Type.hpp  libclang_for_test.hpp
dynamic_reflection/include/lux/cxx/dref/runtime/: Attribute.hpp  CallableHelper.hpp  Class.hpp  ClassInstance.hpp  Declaration.hpp  Enumeration.hpp  Function.hpp  FundamentalTypeInstance.hpp  FundamentalTypeMeta.hpp  Instance.hpp  Invokable.hpp  Marker.hpp  MetaRegistry.hpp  MetaType.hpp  MetaUnit.hpp  Method.hpp  Object.hpp  RuntimeMeta.hpp  StaticMeta.hpp  Type.hpp  hash.hpp  runtime.hpp
dynamic_reflection/pinclude/lux/cxx/dref/generator/: DynamicRefTemplate.inja.hpp  Generator.hpp  MetaRuntimeBinder.hpp  StaticMetaGenerator.hpp  TypeDependencyAnalyzer.h  dynamic_meta.inja.hpp  static_meta.inja.hpp  tools.hpp
dynamic_reflection/pinclude/lux/cxx/dref/generator/templates/: dynamic_enum.inja.hpp  dynamic_func.inia.hpp  dynamic_record.inja.hpp
dynamic_reflection/pinclude/lux/cxx/dref/parser/: CxxParserImpl.hpp  MetaUnitImpl.hpp  ParserResultImpl.hpp  libclang.hpp
dynamic_reflection/pinclude/lux/cxx/dref/runtime/: MetaUnitImpl.hpp  MetaUnitSerializer.hpp
dynamic_reflection/pinclude/lux/cxx/generator/: templates.hpp
dynamic_reflection/src/generator/: DynamicMetaGenerator.cpp  GeneratorHelper.cpp  MetaGenerator.cpp  MetaUnitSerializer.cpp  MetaUnitSerializer.hpp  StaticMataGenerator.cpp  StaticMetaGenerator.cpp  dynamic_meta.inja.hpp  lux_df_gen.cpp  lux_runtime_reflection_gen.cpp  meta_generator.cpp  reflection_template.mustache  static_meta.inja.hpp  static_meta.mustache.hpp  tools.cpp
dynamic_reflection/src/parser/: CxxParser.cpp  CxxParserImpl.cpp  MetaUnit.cpp  ParserResult.cpp  ParserResultImpl.cpp  parse_class_declaration.cpp  parse_class_type.cpp  parse_enumeration_declaration.cpp  parse_enumeration_type.cpp  parse_function_declaration.cpp  parse_function_type.cpp  parse_type_uncertain.cpp
dynamic_reflection/src/runtime/: BasicMetaUnit.cpp  Class.cpp  Enumeration.cpp  Function.cpp  Instance.cpp  MetaRegistry.cpp  MetaUnit.cpp  MetaUnitDeserialization.cpp  MetaUnitSerialization.cpp  MetaUnitSerializer.cpp  Method.cpp  RuntimeMeta.cpp
dynamic_reflection/templates/: annotation_callbacks_test.template.inja  static_meta.template.inja
dynamic_reflection/test/: CMakeLists.txt  clang_config.h.in  dref_parse_test.cpp  dref_runtime_test.cpp  dref_test_libclang.cpp  dref_test_runtime_invoke.cpp  extended_coverage_test.cpp  generate_meta_test.cpp  generate_static_meta_test.cpp  generator_test.cpp  meta_deserializer_test.cpp  meta_parse_test.cpp  meta_unit_serial_test.cpp  meta_unit_serializetion_test.cpp  serializer_test.cpp  test_annotation_callbacks.hpp  test_header.hpp  test_header2.hpp  test_header_extended.hpp
lan_model/: CMakeLists.txt
lan_model/no_use_now/c/lan_model/: declaration.h  enumerator.h  type_kind.h  types.h
memory/: CMakeLists.txt  README.md
memory/include/lux/cxx/memory/: ObjectPool.hpp  intrusive_ptr.hpp
memory/test/: CMakeLists.txt  intrusive_ptr_test.cpp  object_pool_benchmark.cpp  object_pool_test.cpp
reflection/: CMakeLists.txt
reflection/pinclude/lux/reflection/: LuxCxxParser.hpp  LuxCxxParserImpl.hpp
reflection/src/: LuxCxxParserImpl.cpp
static_reflection/: CMakeLists.txt  README.md
static_reflection/include/lux/cxx/static_reflection/: parser.hpp  static_type_info.hpp  type_info.hpp  type_regist.hpp
static_reflection/test/: CMakeLists.txt  static_reflection_test.cpp
subprogram/: CMakeLists.txt  README.md
visibility/: CMakeLists.txt
(+30 files in other folders)
